phase2_Dev/src/objects/Visit_Best_Practices__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Visit__c</fullName>
        <label>Associated Visit</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Visit Best Practices</relationshipLabel>
        <relationshipName>Visit_Best_Practices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Practice_Guidance__c</fullName>
        <formula>Best_Practice__r.Best_Practice_Guidance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Practice Guidance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Practice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Best Practice</label>
        <referenceTo>Standard_Best_Practices__c</referenceTo>
        <relationshipLabel>Visit Best Practices</relationshipLabel>
        <relationshipName>Visit_Best_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Observation__c</fullName>
        <label>Observation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Provider_Type__c</fullName>
        <formula>Associated_Visit__r.Provider_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Provider Type</label>
        <type>Text</type>
    </fields>
    <label>Visit Best Practices</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VBP-{0000}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Best Practices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_in_RO_Visits</fullName>
        <active>true</active>
        <errorConditionFormula>If(Associated_Visit__r.Offline_Lock__c,true,false)</errorConditionFormula>
        <errorMessage>This visit is being used in the offline visit app and is locked. Go to the offline visit app and upload the visit before selecting this action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Best_Practice_Applicable_to_Type</fullName>
        <active>true</active>
        <description>Verifies Best Practice&apos;s Applicable To Matches Visit&apos;s Provider Type</description>
        <errorConditionFormula>NOT(CONTAINS(Best_Practice__r.Applicable_To_Text_Version__c , Associated_Visit__r.Provider_No__r.Record_Type_Name__c ))</errorConditionFormula>
        <errorDisplayField>Best_Practice__c</errorDisplayField>
        <errorMessage>The Best Practice must be Applicable To the Provider Type. It is possible that the Best Practice selected appears multiple times as applicable to different Provider types, but the one matching this Visits Provider must be the one selected.</errorMessage>
    </validationRules>
</CustomObject>